# 579-Project-5

./: .gitignore  579 Project Workplan.xlsx  ADC_Voltage_Read_For_Servo.c  CMakeLists.txt  PCB_6.sch  PWM_For_Servo.c  Policies and Procedures Document.docx  README.md  Technical Documentation File.docx  buzzer.c  hello_world_main.c  ld2450.c  main.c  sdkconfig  sdkconfig.old
ToFv2/main/: CMakeLists.txt  VL53L1.c  main.c
ToFv2/main/include/: VL53L1.h  i2c_master.h
TofCode/main/: CMakeLists.txt  dummy_project.c
masterAlgorithm/main/: CMakeLists.txt  apds9960.c  i2c_master.c  i2c_top_level.c  kinematics.c  main.c  ultrasonic.c  vl53l1.c  vl53l1_api.c  vl53l1_api_calibration.c  vl53l1_api_core.c  vl53l1_api_debug.c  vl53l1_api_preset_modes.c  vl53l1_api_strings.c  vl53l1_core.c  vl53l1_core_support.c  vl53l1_error_strings.c  vl53l1_register_funcs.c  vl53l1_silicon_core.c  vl53l1_wait.c  webServer.c
masterAlgorithm/main/include/: apds9960.h  i2c_master.h  i2c_top_level.h  kinematics.h  ultrasonic.h  vl53l1.h  vl53l1_api.h  vl53l1_api_calibration.h  vl53l1_api_core.h  vl53l1_api_debug.h  vl53l1_api_preset_modes.h  vl53l1_api_strings.h  vl53l1_core.h  vl53l1_core_support.h  vl53l1_def.h  vl53l1_error_codes.h  vl53l1_error_exceptions.h  vl53l1_error_strings.h  vl53l1_ll_def.h  vl53l1_nvm_map.h  vl53l1_platform.h  vl53l1_platform_log.h  vl53l1_platform_user_config.h  vl53l1_platform_user_data.h  vl53l1_platform_user_defines.h  vl53l1_platformold.h  vl53l1_preset_setup.h  vl53l1_register_funcs.h  vl53l1_register_map.h  vl53l1_register_settings.h  vl53l1_register_structs.h  vl53l1_silicon_core.h  vl53l1_tuning_parm_defaults.h  vl53l1_types.h  vl53l1_wait.h  webServer.h
master_algorithm/main/: CMakeLists.txt  accelerometer.c  apds9960.c  i2c_master.c  i2c_testing.c  i2c_top_level.c  kinematics.c  main.c  master_algorithm.c  ultrasonic.c  vl53l1.c  webServer.c
master_algorithm/main/include/: accelerometer.h  apds9960.h  i2c_top_level.h  kinematics.h  ultrasonic.h  (+22 more)
(+167 files in other folders)
