idf_component_register(SRCS "dummy_project.c" "vl53l0x_api_calibration.c" "vl53l0x_api_core.c" "vl53l0x_api_ranging.c" "vl53l0x_api_strings.c" "vl53l0x_api.c" "vl53l0x_platform_log.c" "vl53l0x_platform.c"
                    INCLUDE_DIRS "." "/Users/lewisanderson02/Documents/vivado-boards-master/ESP32/projectTof/TofHeaders")
