idf_component_register(SRCS "apds9960.c" "ultrasonic.c" "vl53l1.c" "main.c" "vl53l1_api.c" "i2c_master.c" "vl53l1_api_calibration.c" "vl53l1_api_core.c" "vl53l1_api_debug.c" "vl53l1_api_preset_modes.c" "vl53l1_api_strings.c" "vl53l1_core_support.c" "vl53l1_core.c" "vl53l1_error_strings.c" "vl53l1_platform.c" "vl53l1_register_funcs.c" "vl53l1_silicon_core.c" "vl53l1_wait.c"
                    INCLUDE_DIRS "." "include")
